src/_assets/css/_base.scss
body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
}

h1 {
  margin-bottom: bs-spacer(12);
}

h2 {
  margin: bs-spacer(12) 0 bs-spacer(8);
  clear: both;
}

h3 {
  margin: bs-spacer(8) 0 bs-spacer(4);
}

dd {
  margin-bottom: .75rem;
}

.card-deck.card-deck--responsive {
  .card {
    flex: 0 0 calc((100% / 3) - #{bs-spacer(4)});
    margin-bottom: bs-spacer(4);
  }
}

.card-footer.card-footer--transparent {
  border: none;
  background-color: transparent;

}

.card-footer.card-footer--links {
  > *:not(:last-child) {
    margin-right: bs-spacer(4);
  }
}

.card-image-holder {
  align-items: center;
  display: flex;
  height: 200px;
  justify-content: center;

  img {
    height: auto;
    max-width: 100%;
    max-height: 100%;
    width: auto;
  }

  svg {
    height: 100%;
    width: 100%;
  }
}

.fixed-col {
  @include media-breakpoint-up(md) {
    bottom: 0;
    overflow-y: auto;
    position: fixed;
    top: $site-header-height;
  }
}

.material-icons {
  font: $site-font-icon;
}

.site-image-right {
  display: block;
  margin: 0 auto;
  max-height: 60vh;
  max-width: 100%;

  @include media-breakpoint-up(md) {
    float: right;
    margin: 0 0 bs-spacer(10) bs-spacer(10);
    max-height: none;
    max-width: calc((100%/2.5) - #{bs-spacer(10)});
  }
}

.site-figure {
  display: flex;
  justify-content: center;

  .site-figure-container {
    flex: 0 1 auto;

    img {
      width: 100%;
    }

    figcaption {
    margin-top: bs-spacer(4);
    text-align: center;
  }
  }
}

.btn.btn-icon {
  align-items: center;
  display: flex;
  justify-content: center;

  .material-icons {
    margin-right: bs-spacer(2);
  }
}

.btn.btn-cta {
    font-size: 18px;
    font-weight: 500;
    padding: bs-spacer(6) bs-spacer(12);
    min-width: 275px;
  }

.embedded-video-wrapper {
  width: 100%;
  padding-bottom: 56.25%; // 16:9 aspect ratio
  position: relative;

  &__frame {
    height: 100%;
    position: absolute;
    width: 100%;
  }
}

.fa-external-link-alt:before {
  font-size: 0.25rem;
  margin-left: 3px;
  opacity: 0.5;
  vertical-align: top;
}

.fa-macos { @extend .fa-apple; }

